--- a/Trillo/sass/_components.scss
+++ b/Trillo/sass/_components.scss
@@ -87,11 +87,9 @@
         display: flex;
         align-items: center;
         
-        
-        &:hover{
-            background-color: var(--color-grey-light-2);
-        }
     }
+    
+
     &__icon-box{
         position: relative;
     }
@@ -126,7 +124,11 @@
 
     &__user:hover > &__menu{
         display: initial;
+        height: max-content;
+        background-color: var(--color-grey-light-2);
+        z-index: 99;
     }
+    
     
     &__user-photo{
         height: 3.75rem;
@@ -134,10 +136,7 @@
         margin-right: 1rem;
     }
     
-    &__user-name{
-        
-    }
-
+    
     &__menu{
         position: absolute;
         top: 100%;
@@ -146,7 +145,6 @@
         display: flex;
         flex-direction: column;
         list-style: none;
-        background-color: transparentize(#333, $amount: .3);
         display: none;
     }
     
@@ -156,6 +154,11 @@
         position: relative;
         z-index: 9;
         color: white;
+        color: var(--color-grey-dark-1);
+
+        &:hover{
+            color: white;
+        }
     }
 
     &__item::before{
@@ -178,10 +181,6 @@
         color: white;
     }
     
-    
-    // &__item:hover{
-    //     background-color: transparentize(#FF3366, $amount: .3)
-    // }
 }
 
 ///////////////////////////////////////////////////
@@ -573,7 +572,6 @@
     }
 
     @media only screen and (max-width: $bp-small) {
-        flex: 1 0 40%;
 
         &:not(:last-of-type){
             margin-right: 1rem;
