--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -106,5 +106,9 @@
         flex-wrap: wrap;
         align-items: stretch;
         justify-content: center;
+
+        .u-fb-full{
+            flex: 1 1 100%;
+        }
     }
 }
